--- a/lambdacomp.cabal
+++ b/lambdacomp.cabal
@@ -94,10 +94,10 @@ library
     LambdaComp.Elaborated.Optimization.Local
     LambdaComp.Elaborated.Syntax
     LambdaComp.Elaborated.TypeCheck
+    LambdaComp.External.Parser
     LambdaComp.External.Syntax
     LambdaComp.External.ToElaborated
     LambdaComp.Ident
-    LambdaComp.Parser
     LambdaComp.PrimOp
 
   -- Other library packages from which modules are imported.
