--- a/lambdacomp.cabal
+++ b/lambdacomp.cabal
@@ -83,6 +83,7 @@ library
     LambdaComp.CBPV.Optimization.EtaReduction
     LambdaComp.CBPV.Optimization.InlineBinding
     LambdaComp.CBPV.Optimization.Local
+    LambdaComp.CBPV.PrettyPrinter
     LambdaComp.CBPV.Syntax
     LambdaComp.CBPV.ToAM
     LambdaComp.CBPV.ToC
@@ -111,6 +112,7 @@ library
     , optparse-applicative  ^>=0.18.1.0
     , parser-combinators    ^>=1.3.0
     , pretty-simple         ^>=4.1.3.0
+    , prettyprinter         ^>=1.7.1
     , process               ^>=1.6.25.0
     , temporary             ^>=1.3
     , text                  ^>=2.1.2
